--- a/Starter_Code.ipynb
+++ b/Starter_Code.ipynb
@@ -9,15 +9,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import our dependencies\n",
+    "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import pandas as pd\n",
-    "import tensorflow as tf\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EIN</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>APPLICATION_TYPE</th>\n",
+       "      <th>AFFILIATION</th>\n",
+       "      <th>CLASSIFICATION</th>\n",
+       "      <th>USE_CASE</th>\n",
+       "      <th>ORGANIZATION</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>INCOME_AMT</th>\n",
+       "      <th>SPECIAL_CONSIDERATIONS</th>\n",
+       "      <th>ASK_AMT</th>\n",
+       "      <th>IS_SUCCESSFUL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10520599</td>\n",
+       "      <td>BLUE KNIGHTS MOTORCYCLE CLUB</td>\n",
+       "      <td>T10</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C1000</td>\n",
+       "      <td>ProductDev</td>\n",
+       "      <td>Association</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10531628</td>\n",
+       "      <td>AMERICAN CHESAPEAKE CLUB CHARITABLE TR</td>\n",
+       "      <td>T3</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C2000</td>\n",
+       "      <td>Preservation</td>\n",
+       "      <td>Co-operative</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-9999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>108590</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10547893</td>\n",
+       "      <td>ST CLOUD PROFESSIONAL FIREFIGHTERS</td>\n",
+       "      <td>T5</td>\n",
+       "      <td>CompanySponsored</td>\n",
+       "      <td>C3000</td>\n",
+       "      <td>ProductDev</td>\n",
+       "      <td>Association</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10553066</td>\n",
+       "      <td>SOUTHSIDE ATHLETIC ASSOCIATION</td>\n",
+       "      <td>T3</td>\n",
+       "      <td>CompanySponsored</td>\n",
+       "      <td>C2000</td>\n",
+       "      <td>Preservation</td>\n",
+       "      <td>Trust</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10000-24999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6692</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10556103</td>\n",
+       "      <td>GENETIC RESEARCH INSTITUTE OF THE DESERT</td>\n",
+       "      <td>T3</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C1000</td>\n",
+       "      <td>Heathcare</td>\n",
+       "      <td>Trust</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100000-499999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>142590</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        EIN                                      NAME APPLICATION_TYPE  \\\n",
+       "0  10520599              BLUE KNIGHTS MOTORCYCLE CLUB              T10   \n",
+       "1  10531628    AMERICAN CHESAPEAKE CLUB CHARITABLE TR               T3   \n",
+       "2  10547893        ST CLOUD PROFESSIONAL FIREFIGHTERS               T5   \n",
+       "3  10553066            SOUTHSIDE ATHLETIC ASSOCIATION               T3   \n",
+       "4  10556103  GENETIC RESEARCH INSTITUTE OF THE DESERT               T3   \n",
+       "\n",
+       "        AFFILIATION CLASSIFICATION      USE_CASE  ORGANIZATION  STATUS  \\\n",
+       "0       Independent          C1000    ProductDev   Association       1   \n",
+       "1       Independent          C2000  Preservation  Co-operative       1   \n",
+       "2  CompanySponsored          C3000    ProductDev   Association       1   \n",
+       "3  CompanySponsored          C2000  Preservation         Trust       1   \n",
+       "4       Independent          C1000     Heathcare         Trust       1   \n",
+       "\n",
+       "      INCOME_AMT SPECIAL_CONSIDERATIONS  ASK_AMT  IS_SUCCESSFUL  \n",
+       "0              0                      N     5000              1  \n",
+       "1         1-9999                      N   108590              1  \n",
+       "2              0                      N     5000              0  \n",
+       "3    10000-24999                      N     6692              1  \n",
+       "4  100000-499999                      N   142590              1  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
     "\n",
     "#  Import and read the charity_data.csv.\n",
     "\n",
@@ -27,19 +179,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>APPLICATION_TYPE</th>\n",
+       "      <th>AFFILIATION</th>\n",
+       "      <th>CLASSIFICATION</th>\n",
+       "      <th>USE_CASE</th>\n",
+       "      <th>ORGANIZATION</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>INCOME_AMT</th>\n",
+       "      <th>SPECIAL_CONSIDERATIONS</th>\n",
+       "      <th>ASK_AMT</th>\n",
+       "      <th>IS_SUCCESSFUL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>T10</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C1000</td>\n",
+       "      <td>ProductDev</td>\n",
+       "      <td>Association</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>T3</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C2000</td>\n",
+       "      <td>Preservation</td>\n",
+       "      <td>Co-operative</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-9999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>108590</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>T5</td>\n",
+       "      <td>CompanySponsored</td>\n",
+       "      <td>C3000</td>\n",
+       "      <td>ProductDev</td>\n",
+       "      <td>Association</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>T3</td>\n",
+       "      <td>CompanySponsored</td>\n",
+       "      <td>C2000</td>\n",
+       "      <td>Preservation</td>\n",
+       "      <td>Trust</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10000-24999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6692</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>T3</td>\n",
+       "      <td>Independent</td>\n",
+       "      <td>C1000</td>\n",
+       "      <td>Heathcare</td>\n",
+       "      <td>Trust</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100000-499999</td>\n",
+       "      <td>N</td>\n",
+       "      <td>142590</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  APPLICATION_TYPE       AFFILIATION CLASSIFICATION      USE_CASE  \\\n",
+       "0              T10       Independent          C1000    ProductDev   \n",
+       "1               T3       Independent          C2000  Preservation   \n",
+       "2               T5  CompanySponsored          C3000    ProductDev   \n",
+       "3               T3  CompanySponsored          C2000  Preservation   \n",
+       "4               T3       Independent          C1000     Heathcare   \n",
+       "\n",
+       "   ORGANIZATION  STATUS     INCOME_AMT SPECIAL_CONSIDERATIONS  ASK_AMT  \\\n",
+       "0   Association       1              0                      N     5000   \n",
+       "1  Co-operative       1         1-9999                      N   108590   \n",
+       "2   Association       1              0                      N     5000   \n",
+       "3         Trust       1    10000-24999                      N     6692   \n",
+       "4         Trust       1  100000-499999                      N   142590   \n",
+       "\n",
+       "   IS_SUCCESSFUL  \n",
+       "0              1  \n",
+       "1              1  \n",
+       "2              0  \n",
+       "3              1  \n",
+       "4              1  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Drop the non-beneficial ID columns, 'EIN' and 'NAME'.\n",
-    "#  YOUR CODE GOES HERE\n",
     "application_df.drop('EIN', axis=1, inplace=True)\n",
+    "application_df.drop('NAME', axis=1, inplace=True)\n",
     "application_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -58,19 +341,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Determine the number of unique values in each column.\n",
-    "#  YOUR CODE GOES HERE"
+    "\n",
+    "application_df.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -88,27 +372,28 @@
        "T13       66\n",
        "T12       27\n",
        "T2        16\n",
-       "T14        3\n",
        "T25        3\n",
-       "T15        2\n",
+       "T14        3\n",
        "T29        2\n",
+       "T15        2\n",
        "T17        1\n",
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Look at APPLICATION_TYPE value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df[\"APPLICATION_TYPE\"].value_counts()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +411,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,8 +419,11 @@
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
-    "\n",
+    "application_type_cutoff_value = 528\n",
+    "application_types_to_replace = []\n",
+    "for idx,name in enumerate(application_df[\"APPLICATION_TYPE\"].value_counts().index.tolist()):\n",
+    "    if application_df[\"APPLICATION_TYPE\"].value_counts()[idx] < application_type_cutoff_value:\n",
+    "         application_types_to_replace.append(name)\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
     "    application_df['APPLICATION_TYPE'] = application_df['APPLICATION_TYPE'].replace(app,\"Other\")\n",
@@ -146,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -158,27 +446,27 @@
        "C3000     1918\n",
        "C2100     1883\n",
        "         ...  \n",
-       "C1370        1\n",
        "C4120        1\n",
-       "C2600        1\n",
-       "C2190        1\n",
-       "C6100        1\n",
+       "C8210        1\n",
+       "C2561        1\n",
+       "C4500        1\n",
+       "C2150        1\n",
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Look at CLASSIFICATION value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df[\"CLASSIFICATION\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -211,40 +499,41 @@
        "C6000       15\n",
        "C1250       14\n",
        "C8200       11\n",
-       "C1278       10\n",
        "C1238       10\n",
-       "C1237        9\n",
+       "C1278       10\n",
        "C1235        9\n",
+       "C1237        9\n",
        "C7210        7\n",
-       "C1720        6\n",
        "C2400        6\n",
+       "C1720        6\n",
        "C4100        6\n",
        "C1257        5\n",
        "C1600        5\n",
-       "C0           3\n",
        "C1260        3\n",
        "C2710        3\n",
+       "C0           3\n",
+       "C3200        2\n",
        "C1234        2\n",
        "C1246        2\n",
        "C1267        2\n",
-       "C3200        2\n",
        "C1256        2\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
+    "classification_vc = application_df[\"CLASSIFICATION\"].value_counts()\n",
+    "classification_vc[classification_vc > 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +548,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,6 +557,11 @@
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
     "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace = []\n",
+    "classifications_cutoff_value = 1883\n",
+    "for idx,name in enumerate(application_df[\"CLASSIFICATION\"].value_counts().index.tolist()):\n",
+    "    if application_df[\"CLASSIFICATION\"].value_counts()[idx] < classifications_cutoff_value:\n",
+    "         classifications_to_replace.append(name)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
